# gwicap

./: .gitignore  LICENSE  README.md  pyproject.toml  scope_data.xlsx
gwicap/: __main__.py  instrument.py  ui.py  utils.py
